# emc_app

./: .Makefile.in.swp  .Makefile.swp  .configure.in.swp  COMPILE  Makefile  README.md  aclocal.m4  config.status  configure  configure.ac  configure.in  run.sh
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: .Makefile.in.swp  .emc.cc.swp  Makefile  Makefile.in  emc.cc  emc.hh  emc_avplayer.cc  emc_avplayer.hh
